# Tic-Tac-Toe

./: CMakeLists.txt  tic_tac_toe.c
.github/workflows/: cmake-multi-platform.yml
